experimental_robot_pack/log/build_2023-12-16_17-42-02/experimental_robot_pack/stderr.log
/usr/lib/python3/dist-packages/setuptools/command/install.py:34: SetuptoolsDeprecationWarning: setup.py install is deprecated. Use build and pip and other standards-based tools.
  warnings.warn(
  File "/home/nekr/ros2_ws/src/experimental_robot_pack/install/experimental_robot_pack/lib/python3.10/site-packages/experimental_robot_pack/my_robot_move.py", line 148
    upper_white = np.array([255, 30, 255]
                          ^
SyntaxError: '(' was never closed

